fix(loading-svg): Give the bolt a little space to avoid clipping
Fixes #297

--- a/app/components/LoadingBolt/LoadingBolt.scss
+++ b/app/components/LoadingBolt/LoadingBolt.scss
@@ -17,7 +17,7 @@
   min-height: 250px;
 
   .bolt svg {
-    height: 150px;
+    height: 155px;
     width: 150px;
   }
 
